namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apptest
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
    argocd.argoproj.io/managed-by: openshift-gitops
    appname: f5-hello-world
