deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: f5-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: f5-hello-world
  template:
    metadata:
      creationTimestamp: null
      labels:
        appname: f5-hello-world
      annotations:
        backup.velero.io/backup-volumes: pvc-f5
    spec:
      volumes:
      - name: pvc-f5
        persistentVolumeClaim:
          claimName: pvc-f5
      - name: pvc-f52
        persistentVolumeClaim:
          claimName: pvc-f52
      containers:
        - name: f5-hello-world
          image: 'f5devcentral/f5-hello-world:develop'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: pvc-f5
            mountPath: /data/
          - name: pvc-f52
            mountPath: /data2/            
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
