service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: f5-hello-world
  namespace: f5-hello-world
  labels:
    appname: f5-hello-world
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    appname: f5-hello-world 
  type: ClusterIP
