f5app.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: f5-hello-world
  namespace: projectd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: f5-hello-world
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: f5-hello-world
      annotations:
        backup.velero.io/backup-volumes: pvc-f5
    spec:
      volumes:
      - name: pvc-f5
        persistentVolumeClaim:
          claimName: pvc-f5
      containers:
        - name: f5-hello-world
          image: 'f5devcentral/f5-hello-world:develop'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: pvc-f5
            mountPath: /data/
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: f5-hello-world
  namespace: projectd
  labels:
    app: f5-hello-world
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app: f5-hello-world
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: f5-hello-world
  namespace: projectd
  labels:
    app: f5-hello-world
spec:
  host: f5-hello-world-projectd.apps.apps.cluster-f287.f287.sandbox1287.opentlc.com
  to:
    kind: Service
    name: f5-hello-world
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
